# agent_gauntlet

./: .gitignore  CONTEXT.md  OWNERSHIP.md  README.md  agent_gauntlet_product_outline.md  agent_gauntlet_writeup.md  instructions.md  pyproject.toml
agents/codebase_migrator/: manifest.json
apps/dashboard/: README.md  package-lock.json  package.json
contracts/: agent_config.schema.json  dashboard_data.schema.json  generation_record.schema.json  pack_contract.md  promotion_record.schema.json  run_record.schema.json  sample_dashboard_data.json  training_record.schema.json  validation_record.schema.json
data/agent-configs/: sample-agent-gauntlet.json
data/codebase_migration_agent_1/: agent-run.json  generation.json  promotion.json  training.json  validation.json
data/dashboard/: demo-data.json
demo/: demo_script.md
docs/pitch/: dashboard_walkthrough.md  judge_pitch.md
docs/product/: agent_runtime_decisions.md  glossary.md  product_brief.md
docs/task_splits/: resplit_teammate_1_core_engine_contracts_prompt.md  resplit_teammate_2_migration_pack_sample_repo_prompt.md  resplit_teammate_3_dashboard_demo_prompt.md
packs/code_migration/: README.md  pack.yaml
sample-migration-agent/: README.md  agentgauntlet.yaml  codex_sdk_wrapper.py  pyproject.toml  run_sample_migration.py
sample-migration-agent/.agenteval/: harness.yaml
sample-migration-agent/docs/: api_contract.md  pydantic_v2_migration_guide.md
sample-migration-agent/tests/: test_agent_runtime_contract.py  test_api_contract.py  test_payments.py  test_validation_errors.py
scripts/: README.md
(+48 files in other folders)
